[package]
name = "tabletools"
version = "0.1.0"
description = "A collection of command-line programs for working with semi-structured data"
readme = "README.md"
repository = "https://github.com/bergey/tabletools"
license = "MIT"
authors = ["Daniel Bergey <bergey@teallabs.org>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
serde_json = "1.0"
